# ml-engineering-churn-prediction

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml
docs/: ml_canvas.md
notebooks/: 01_eda_baseline.ipynb
