[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "churn-prediction"
version = "0.1.0"
description = "End-to-end ML pipeline for telecom customer churn prediction using PyTorch MLP"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Mateus", email = "mvalentimcloud@gmail.com"},
]

dependencies = [
    # ML Core
    "torch>=2.2.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",

    # Experiment Tracking
    "mlflow>=2.11.0",

    # API
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",

    # Data Validation
    "pandera>=0.18.0",

    # Logging
    "structlog>=24.1.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",       # Para testar a FastAPI (TestClient)
    "ruff>=0.3.0",
    "ipykernel>=6.29.0",   # Para notebooks Jupyter
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]

[project.scripts]
serve = "src.api.main:start_server"

# ── Ruff (linter + formatter) ────────────────────────────────────────────────
# Ruff substitui flake8, isort, black — tudo em uma ferramenta só, e é muito rápido.
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (ordenação de imports)
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (controlado pelo formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]

# ── Setuptools ────────────────────────────────────────────────────────────────
[tool.setuptools.packages.find]
include = ["src*"]